Check fixes for JDK 17