@@ -1850,6 +1850,8 @@
                             <argLine combine.children="append">
                                 --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                                 --add-opens java.base/java.nio=ALL-UNNAMED
+                                -XX:+UseZGC
+                                -Xmx2304M
                             </argLine>
                         </configuration>
                     </plugin>
