@@ -1,8 +1,4 @@
 -server
--Xmx2G
--XX:-UseBiasedLocking
--XX:+UseG1GC
--XX:G1HeapRegionSize=32M
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+ExitOnOutOfMemoryError
 -XX:+HeapDumpOnOutOfMemoryError
